[gd_scene load_steps=2 format=3 uid="uid://dei2lwk12ct06"]

[ext_resource type="Script" uid="uid://dm10hbytbyhmi" path="res://scripts/options_menu.gd" id="1_liyum"]

[node name="OptionsMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_liyum")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -245.0
offset_top = -88.0
offset_right = 245.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSliderMaster" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
max_value = 1.0
step = 0.05
value = 0.5

[node name="HSliderMusic" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
max_value = 10.0
step = 0.5
value = 5.0

[node name="HSlider2SFX" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
max_value = 10.0
step = 0.5
value = 5.0

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 13.0
offset_right = 125.0
offset_bottom = 83.0
theme_override_font_sizes/font_size = 30
text = "Back"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -76.0
offset_right = 320.0
offset_bottom = 71.0
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Master"
horizontal_alignment = 2

[node name="Label2" type="Label" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 20
text = "Music"
horizontal_alignment = 2

[node name="Label3" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "SFX"
horizontal_alignment = 2

[connection signal="value_changed" from="VBoxContainer/HSliderMaster" to="." method="_on_h_slider_master_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HSliderMusic" to="." method="_on_h_slider_music_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HSlider2SFX" to="." method="_on_h_slider_2sfx_value_changed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
